# backend/controllers/userController.js
@@ -60,7 +60,6 @@ export const registerUser = async (req, res, next) => {
 
 export const loginUser = async (req, res, next) => {
   try {
-    console.log(req.body, "...dara");
     const { email, password } = req.body;
     const user = await User.findOne({ email }).select("+password");
     if (!user) {
@@ -131,8 +130,8 @@ export const resetPassword = async (req, res, next) => {
       return next(new ErrorHandler("Password does not match", 400));
     }
     user.password = req.body.password;
-    user.resetPasswordToken = undefined;
     user.resetPasswordExpire = undefined;
+    user.resetPasswordToken = undefined;
     await user.save;
     sendCookie(user, res, `Your Password Reset Successful`, 200);
   } catch (error) {
@@ -159,9 +158,171 @@ export const logout = (req, res, next) => {
   }
 };
 
-export const getMyProfile = (req, res) => {
+//get user detail
+
+export const getUserDetails = (req, res) => {
   res.status(200).json({
     success: true,
     user: req.user,
   });
+};
+
+// update Password
+export const updatePassword = async (req, res, next) => {
+  try {
+    const user = await User.findOne({ email: req.user.email }).select(
+      "+password"
+    );
+    const isPasswordMatched = bcrypt.compare(
+      user.password,
+      req.body.oldPassword
+    );
+    if (!isPasswordMatched) {
+      return next(new ErrorHandler("Old password is incorrect", 400));
+    }
+    if (req.body.newPassword !== req.body.confirmPassword) {
+      return next(new ErrorHandler("Password Doest Not Match", 400));
+    }
+    const hashedPassword = await bcrypt.hash(req.body.newPassword, 10);
+    user.password = hashedPassword;
+    await user.save();
+    sendCookie(user, res, `Password Updated Successful`, 200);
+  } catch (error) {
+    return next(error);
+  }
+};
+
+//update Profile
+export const updateProfile = async (req, res, next) => {
+  try {
+    const newUserData = {
+      email: req.body.email,
+      name: req.body.name,
+    };
+    if (req.body.avatar !== "") {
+      const user = await User.findById(req.user._id);
+      const imageId = user.avatar.public_id;
+      await cloudinary.v2.uploader.destroy(imageId);
+      const avatarImage = req.files.avatar; // Access the uploaded image file
+
+      // Save the image locally
+      const currentFilePath = fileURLToPath(import.meta.url);
+      const currentDirectory = dirname(currentFilePath);
+      const localDirectory = path.join(currentDirectory, "../static/img");
+      const localPath = path.join(localDirectory, avatarImage.name);
+      await avatarImage.mv(localPath);
+
+      // Upload the image to Cloudinary
+      const myCloud = await cloudinary.v2.uploader.upload(localPath, {
+        folder: "avatars",
+        width: 150,
+        crop: "scale",
+      });
+      newUserData.avatar = {
+        public_id: myCloud.public_id,
+        url: myCloud.secure_url,
+      };
+    }
+    const user = await User.findByIdAndUpdate(req.user._id, newUserData, {
+      new: true,
+      runValidators: true,
+      useFindAndModify: false,
+    });
+    res.status(200).json({
+      success: true,
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+//Admin Panel - get all users
+export const getAllUser = async (req, res, next) => {
+  try {
+    // console.log(req.query)
+    ///api/v1/admin/users?page=1&limit=10
+    const page = parseInt(req.query.page) || 1;
+    const limit = parseInt(req.query.limit) || 10;
+    const startIndex = (page - 1) * limit;
+    const endIndex = page * limit;
+
+    const users = await User.find().skip(startIndex).limit(limit);
+    const totalUsers = await User.countDocuments();
+
+    const pagination = {
+      currentPage: page,
+      totalPages: Math.ceil(totalUsers / limit),
+      totalUsers,
+    };
+
+    res.status(200).json({
+      success: true,
+      pagination,
+      users,
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+//Admin -get Single User or UserDetail
+export const getSingleUser = async (req, res, next) => {
+  try {
+    console.log(req.params.id, "...hello");
+    const user = await User.findById(req.params.id);
+    if (!user) {
+      return next(
+        new ErrorHandler(`User doest not exist with Id: ${req.params.id}`)
+      );
+    }
+    res.status(200).json({
+      success: true,
+      user,
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+//Admin update particular user
+export const updateUserRole = async (req, res, next) => {
+  try {
+    const newUserData = {
+      name: req.body.name,
+      email: req.body.email,
+      role: req.body.role,
+    };
+    await User.findByIdAndUpdate(req.params.id, newUserData, {
+      new: true,
+      runValidators: true,
+      useFindAndModify: false,
+    });
+    res.status(200).json({
+      success: true,
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// Admi -delete particular User
+export const deleteUser = async (req, res, next) => {
+  try {
+    const user = await User.findById(req.params.id);
+    if (!user) {
+      return next(new ErrorHandler("User Not Found", 404));
+    }
+    const imageId = user.avatar.public_id;
+
+    await cloudinary.v2.uploader.destroy(imageId);
+
+    await User.findByIdAndDelete(req.params.id);
+
+    res.status(200).json({
+      success: true,
+      message: "User Deleted Successfully",
+    });
+  } catch (error) {
+    return next(error);
+  }
 };
